--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <h1>its a weekday!</h1>
-    <p>get this shit completed by EOD.</p>
-    <p>I am pranjal gupta.</p>
-    <p> connect with me on pranjalgupta.dtu@gmail.com</p>
+    <h1>To-do-list</h1>
 </body>
 
 </html>
